--- a/web/data.html
+++ b/web/data.html
@@ -517,7 +517,7 @@ permalink: "{{ page.filePathStem }}.html"
 
     <div id="btnv">
         <span class="btn-arrow-left">&larr; &nbsp;</span>
-        <a class="btn-prev-text" href="overview.html" title="Previous Section: Overview"><span>Overview</span></a>
+        <a class="btn-prev-text" href="overview.html" title="Previous Section: Machine Learning"><span>Machine Learning</span></a>
         <a class="btn-next-text" href="visualization.html" title="Next Section: Classification"><span>Visualization</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
