--- a/web/overview.html
+++ b/web/overview.html
@@ -5,10 +5,9 @@ permalink: "{{ page.filePathStem }}.html"
 {% include "toc.njk" %}
 
 <div class="col-md-9 col-md-pull-3">
-    <h1 id="overview-top" class="title">Overview</h1>
+    <h1 id="overview-top" class="title">Machine Learning</h1>
 
-    <p>In this section, we will review the important concepts of machine learning.
-        Machine learning is a type of artificial intelligence that provides computers with the ability
+    <p>Machine learning is a type of artificial intelligence that provides computers with the ability
         to learn without being explicitly programmed. Machine learning algorithms can make
         predictions on data by building a model from example inputs.</p>
 
@@ -62,6 +61,13 @@ permalink: "{{ page.filePathStem }}.html"
         a preliminary step in many applications consists of selecting a subset of features,
         or constructing a new and reduced set of features to facilitate learning, and
         to improve generalization and interpretability.</p>
+
+    <p>Feature engineering is the process of using domain knowledge of the data to create features that make
+        machine learning algorithms work. Feature engineering is fundamental to the application of machine
+        learning, and is both difficult and expensive. It requires the experimentation of multiple
+        possibilities and the combination of automated
+        techniques with the intuition and knowledge of the domain expert.</p>
+
 
     <h2 id="supervised-learning">Supervised Learning</h2>
 
@@ -186,6 +192,7 @@ permalink: "{{ page.filePathStem }}.html"
         <a class="btn-next-text" href="data.html" title="Next Section: Data"><span>Data</span></a>
         <span class="btn-arrow-right">&nbsp;&rarr;</span>
     </div>
+
 </div>
 
 <script type="text/javascript">
