--- a/web/association-rule.html
+++ b/web/association-rule.html
@@ -108,9 +108,7 @@ permalink: "{{ page.filePathStem }}.html"
         the number of discovered frequent item sets.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    def fpgrowth(itemsets: Array[Array[Int]], minSupport: Int): Buffer[ItemSet]
-    def fpgrowth(itemsets: Array[Array[Int]], minSupport: Int, output: PrintStream): Long
-    def fpgrowth(itemsets: Array[Array[Int]], minSupport: Int, output: String): Long
+    def fpgrowth(minSupport: Int, itemsets: Array[Array[Int]]): Stream[ItemSet]
     </code></pre>
 
     <p>In practice, even the raw input is often too big to fit into the memory. To conquer this
@@ -121,13 +119,14 @@ permalink: "{{ page.filePathStem }}.html"
         In this way, we don't need load the whole database into the main memory.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    def fpgrowth(file: String, minSupport: Int, output: PrintStream): Long
-    def fpgrowth(file: String, minSupport: Int, output: String): Long
+    def fptree(minSupport: Int, supplier: Supplier[Stream[Array[Int]]]): FPTree
+
+    def fpgrowth(tree: FPTree): Stream[ItemSet]
     </code></pre>
 
     <p>In the below example, we apply FP-Growth to a toy data.</p>
     <pre class="prettyprint lang-scala"><code>
-    val itemsets = Array(
+    smile> val itemsets = Array(
         Array(1, 3),
         Array(2),
         Array(4),
@@ -140,20 +139,16 @@ permalink: "{{ page.filePathStem }}.html"
         Array(1, 2, 3)
     )
 
-    fpgrowth(itemsets, 3, System.out)
-    </code></pre>
-
-    <p>The output will look like</p>
-
-    <pre class="prettyprint lang-scala"><code>
-    3 (8)
+    smile> fpgrowth(3, itemsets).forEach { itemset => println(itemset) }
     4 (3)
     1 (5)
-    2 (7)
     2 1 (3)
     3 2 1 (3)
     3 1 (5)
+    2 (7)
     3 2 (6)
+    3 (8)
+
     </code></pre>
 
     <p>Each row is a frequent item set, ending with the frequency in parenthesis.
@@ -161,7 +156,23 @@ permalink: "{{ page.filePathStem }}.html"
         large benchmark datasets.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    fpgrowth("data/transaction/kosarak.dat", 1000, System.out)
+    smile> val tree = fptree(1000, () => {
+      smile.util.Paths.getTestDataLines("transaction/kosarak.dat").map { line =>
+          line.split(" ").map(_.toInt).toArray
+      }
+    })
+
+    smile> fpgrowth(tree).limit(10).forEach { itemset => println(itemset) }
+    5634 (1000)
+    3805 (1001)
+    3376 (1001)
+    2279 (1001)
+    6333 (1002)
+    243 (1002)
+    808 (1003)
+    3875 (1004)
+    2265 (1004)
+    996 (1004)
     </code></pre>
 
     <p>The data <code>kosarak.data</code> has 990,002 transactions.
@@ -176,25 +187,25 @@ permalink: "{{ page.filePathStem }}.html"
         by employing the total support tree that is a kind of compressed set enumeration tree.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    def arm(itemsets: Array[Array[Int]], minSupport: Int, confidence: Double): Buffer[AssociationRule]
-    def arm(itemsets: Array[Array[Int]], minSupport: Int, confidence: Double, output: PrintStream): Long
-    def arm(itemsets: Array[Array[Int]], minSupport: Int, confidence: Double, output: String): Long
-    def arm(file: String, minSupport: Int, confidence: Double, output: PrintStream): Long
-    def arm(file: String, minSupport: Int, confidence: Double, output: String): Long
+    def arm(minSupport: Int, confidence: Double, itemsets: Array[Array[Int]]): Stream[AssociationRule]
+
+    def arm(confidence: Double, tree: FPTree): Stream[AssociationRule]
     </code></pre>
 
     <p>The API is similar to <code>fpgrowth</code> except the additional parameter <code>confidence</code>.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    smile> arm(itemsets, 3, 0.6, System.out)
-    (3) => (2)	support = 60.00%	confidence = 75.00%
-    (2) => (3)	support = 60.00%	confidence = 85.71%
-    (3) => (1)	support = 50.00%	confidence = 62.50%
-    (1) => (3)	support = 50.00%	confidence = 100.00%
-    (1) => (2)	support = 30.00%	confidence = 60.00%
-    (3, 1) => (2)	support = 30.00%	confidence = 60.00%
-    (2, 1) => (3)	support = 30.00%	confidence = 100.00%
-    (1) => (3, 2)	support = 30.00%	confidence = 60.00%
+    smile> arm(0.6, tree).limit(10).forEach { rule => println(rule) }
+    (11) => (6) support = 32.73% confidence = 89.00% lift = 1.47 leverage = 0.1039
+    (3, 11) => (6) support = 14.51% confidence = 89.09% lift = 1.47 leverage = 0.0462
+    (1) => (6) support = 13.34% confidence = 66.89% lift = 1.10 leverage = 0.0123
+    (3, 1) => (6) support = 5.84% confidence = 68.28% lift = 1.12 leverage = 0.0064
+    (6, 1) => (11) support = 8.70% confidence = 65.17% lift = 1.77 leverage = 0.0379
+    (11, 1) => (6) support = 8.70% confidence = 93.70% lift = 1.54 leverage = 0.0306
+    (6, 3, 1) => (11) support = 3.81% confidence = 65.30% lift = 1.78 leverage = 0.0167
+    (3, 11, 1) => (6) support = 3.81% confidence = 93.73% lift = 1.54 leverage = 0.0134
+    (218) => (6) support = 7.85% confidence = 87.67% lift = 1.44 leverage = 0.0241
+    (3, 218) => (6) support = 3.43% confidence = 87.86% lift = 1.45 leverage = 0.0106
     </code></pre>
 
     <div id="btnv">
