--- a/web/clustering.html
+++ b/web/clustering.html
@@ -450,17 +450,14 @@ permalink: "{{ page.filePathStem }}.html"
         entire process is repeated multiple time to find better.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    def clarans[T](data: Array[T], distance: Distance[T], k: Int, maxNeighbor: Int, numLocal: Int): CLARANS[T]
-
-    // CLARANS with Euclidean distance
-    def clarans(data: Array[Array[Double]], k: Int, maxNeighbor: Int, numLocal: Int): CLARANS[Array[Double]]
+    def clarans[T](data: Array[T], k: Int, maxNeighbor: Int, distance: ToDoubleBiFunction[T,T]): CLARANS[T]
     </code></pre>
 
-    <p>CLARANS has two parameters: the maximum number of neighbors examined
-        (maxNeighbor) and the number of local minima obtained (numLocal). The
-        higher the value of maxNeighbor, the closer is CLARANS to PAM, and the
-        longer is each search of a local minima. But the quality of such a local
-        minima is higher and fewer local minima needs to be obtained.</p>
+    <p>The parameter <code>maxNeighbor</code> specifies the maximum number of
+        neighbors examined. The higher the value of maxNeighbor, the closer is
+        CLARANS to PAM, and the longer is each search of a local minima. But
+        the quality of such a local minima is higher and fewer local minima
+        needs to be obtained.</p>
 
     <div style="width: 100%; display: inline-block; text-align: center;">
         <img src="images/clarans.png" class="enlarge" style="width: 480px;" />
@@ -469,56 +466,6 @@ permalink: "{{ page.filePathStem }}.html"
 
     <p>The above clustering partition is achieved with <code>maxNeighbor = 10</code>
         and <code>numLocal = 20</code>.</p>
-
-    <h2 id="birch">BIRCH</h2>
-
-    <p>BIRCH (Balanced Iterative Reducing and Clustering using Hierarchies) performs
-        hierarchical clustering over particularly large datasets. An advantage of
-        BIRCH is its ability to incrementally and dynamically cluster incoming,
-        multi-dimensional metric data points in an attempt to produce the high
-        quality clustering for a given set of resources (memory and time constraints).</p>
-
-    <p>BIRCH has several advantages. For example, each clustering decision is made
-        without scanning all data points and currently existing clusters. It
-        exploits the observation that data space is not usually uniformly occupied
-        and not every data point is equally important. It makes full use of
-        available memory to derive the finest possible sub-clusters while minimizing
-        I/O costs. It is also an incremental method that does not require the whole
-        data set in advance.</p>
-
-    <pre class="prettyprint lang-scala"><code>
-    def birch(data: Array[Array[Double]], k: Int, minPts: Int, branch: Int, radius: Double): BIRCH
-    </code></pre>
-
-    <p>This implementation produces a clustering in three steps. First step
-        builds a CF (clustering feature) tree by a single scan of database.
-        The second step clusters the leaves of CF tree by hierarchical clustering.
-        Then the user can use the learned model to cluster input data in the final
-        step. In total, we scan the database twice.</p>
-
-    <p>A CF leaf will be treated as outlier if the number of its
-        points is less than the parameter <code>minPts</code>.
-        The branching factor parameter <code>branch</code> is the
-        maximum number of children nodes and the parameter <code>radius</code>
-        is the maximum radius of a sub-cluster.</p>
-
-    <pre class="prettyprint lang-scala"><code>
-    val clusters = birch(x, 6, 3, 10, 1)
-    val y = x.map(clusters.predict(_)).toArray
-    plot(x, y, '.', Palette.COLORS)
-    </code></pre>
-
-    <p>Although BIRCH's Scala API provides a batch interface to cluster data,
-        the algorithm itself is online (i.e. processing data point one by one).
-        The user should use the method <code>predict</code> on the input (or
-        new) data to get the cluster labels as shown in the above example.</p>
-
-    <div style="width: 100%; display: inline-block; text-align: center;">
-        <img src="images/birch.png" class="enlarge" style="width: 480px;" />
-        <div class="caption" style="min-width: 480px;">BIRCH</div>
-    </div>
-
-    <p>Note that points in orange are outliers labeled by the algorithm.</p>
 
     <h2 id="dbscan">DBSCAN</h2>
 
@@ -559,10 +506,9 @@ permalink: "{{ page.filePathStem }}.html"
         in <code>O(log n)</code>, an overall runtime complexity of <code>O(n log n)</code> is obtained.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    val x = read.table("data/clustering/chameleon/t4.8k.txt").unzip
+    val x = read.csv("data/clustering/chameleon/t4.8k.txt", header=false, delimiter=' ').toArray
     val clusters = dbscan(x, 20, 10)
-    val y = clusters.getClusterLabel
-    plot(x, y, '.', Palette.COLORS)
+    plot(x, clusters.y, '.', Palette.COLORS)
     </code></pre>
 
     <p>The chameleon is a set of complicated spatial data of
@@ -632,9 +578,9 @@ permalink: "{{ page.filePathStem }}.html"
         high-dimensional data in general.</p>
 
     <pre class="prettyprint lang-scala"><code>
+    val x = read.csv("data/clustering/gaussian/six.txt", header=false, delimiter=' ').toArray
     val clusters = denclue(x, 1.0, 50)
-    val y = clusters.getClusterLabel
-    plot(x, y, '.', Palette.COLORS)
+    plot(x, clusters.y, '.', Palette.COLORS)
     </code></pre>
 
     <p>DENCLUE doesn't directly label some data as outliers. However, it may report
@@ -678,10 +624,9 @@ permalink: "{{ page.filePathStem }}.html"
         random samples.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    val x = read.table("data/clustering/nonconvex/sincos.txt").unzip
+    val x = read.csv("data/clustering/nonconvex/sincos.txt", header=false, delimiter='\t').toArray
     val clusters = specc(x, 2, 0.2)
-    val y = clusters.getClusterLabel
-    plot(x, y, 'o', Palette.COLORS)
+    plot(x, clusters.y, 'o', Palette.COLORS)
     </code></pre>
 
     <p>For this nonconvex data, spectral clustering works very well with appropriate smooth parameter.</p>
@@ -723,10 +668,9 @@ permalink: "{{ page.filePathStem }}.html"
         etc. Note that a random initialization is NOT appropriate.</p>
 
     <pre class="prettyprint lang-scala"><code>
-    val x = read.table("data/clustering/gaussian/six.txt").unzip
+    val x = read.csv("data/clustering/gaussian/six.txt", header=false, delimiter=' ').toArray
     val clusters = mec(x, 20, 2.0)
-    val y = clusters.getClusterLabel
-    plot(x, y, '.', Palette.COLORS)
+    plot(x, clusters.y, '.', Palette.COLORS)
     </code></pre>
 
     <p>Note that we use <code>k = 20</code> for this data and the algorithm still successfully
